# tts-node

./: .gitignore  404.html  CMakeLists.txt  README.md  colcon.pkg  index.html  mkdocs.yml  package.xml  pixi.toml
.github/workflows/: cpp-formatter.yml  ros2_build_ros2_debian_package.yml  ros2_jazzy_code_compiles.yml  ros2_jazzy_code_compiles_windows.yml  ros2_jazzy_conda_package_linux.yml  ros2_jazzy_conda_package_win.yml
about/implementation/: index.html
contributing/license/: index.html
contributing/rules/: index.html
docs/: index.md
docs/about/: implementation.md
docs/usage/: overview.md  ros2_pixi_build_linux_windows.md  usage_with_native_linux.md
msg/: Custom.msg
rattler/: bld_colcon_merge.bat  build_ament_cmake.sh  recipe.yaml  set_build_var.ps1  set_build_var.sh
search/: search_index.json
src/: audio_publisher_node.cpp  custom_node.cpp  custom_node.hpp  speak_script.sh  tts_node.cpp  tts_node.hpp
tests/: some_test_code.cpp
usage/overview/: index.html
usage/ros2_pixi_build_linux_windows/: index.html
usage/usage_with_native_linux/: index.html
